--- a/HelloWorld.Rmd
+++ b/HelloWorld.Rmd
@@ -1,2 +1,9 @@
+---
+title: "HelloWorld"
+author: "nancy"
+date: "10/26/2020"
+output: pdf_document
+---
 
-## This is a markdown files
+
+##This is a markdown files
