--- a/HelloWorld.Rmd
+++ b/HelloWorld.Rmd
@@ -2,8 +2,8 @@
 title: "HelloWorld"
 author: "nancy"
 date: "10/26/2020"
-output: pdf_document
+output: word_document
 ---
 
 
-##This is a markdown files
+## This is a markdown files
